objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Brand__c</fullName>
        <globalPicklist>Product_Brand</globalPicklist>
        <label>Product Brand</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <globalPicklist>Product_Category</globalPicklist>
        <label>Product Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Brand__c</fullName>
        <globalPicklist>Product_Sub_Brand</globalPicklist>
        <label>Product Sub Brand</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Channel__c</fullName>
        <globalPicklist>ChannelCodePicklist</globalPicklist>
        <label>Store Channel</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Local_Channel__c</fullName>
        <globalPicklist>Local_Channel</globalPicklist>
        <label>Store Local Channel</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Code__c</fullName>
        <label>Survey Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>DateTime</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>From__c</columns>
        <columns>Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>